React Redux Firebase setup

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-API_KEY=AIzaSyDtYGO79C_sCAIbDo5l0eWBCaJZ8LiN1uo
-AUTH_DOMAIN=react-newsroom.firebaseapp.com
-DATABASE_URL=https://react-newsroom.firebaseio.com
-PROJECT_ID=react-newsroom
-STORAGE_BUCKET=react-newsroom.appspot.com
-MESSAGING_SENDER_ID=1011006262536
-APP_ID=1:1011006262536:web:b50b6339edd3df7c54b0bd
-MEASUREMENT_ID=G-SKQ0GJNEY8
+REACT_APP_API_KEY=AIzaSyDtYGO79C_sCAIbDo5l0eWBCaJZ8LiN1uo
+REACT_APP_AUTH_DOMAIN=react-newsroom.firebaseapp.com
+REACT_APP_DATABASE_URL=https://react-newsroom.firebaseio.com
+REACT_APP_PROJECT_ID=react-newsroom
+REACT_APP_STORAGE_BUCKET=react-newsroom.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=1011006262536
+REACT_APP_APP_ID=1:1011006262536:web:b50b6339edd3df7c54b0bd
+REACT_APP_MEASUREMENT_ID=G-SKQ0GJNEY8
