--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
+    "include-media": "^1.4.9",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
